--- a/resources/sass/styles/main.scss
+++ b/resources/sass/styles/main.scss
@@ -12,7 +12,7 @@
 
 :root {
     --black : #0A0909;
-    --cian : #292d3e;
+    --cian : #68E1FD;
     --menta : #11D1A2;
     --purpura : #6E2AB6;
     @include scroll(var(--cian));
