--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -1,376 +1,1 @@
-#open {
-  display: none;
-}
-
-.menu {
-  display: none;
-}
-
-.menu-open {
-  width: 1.5em;
-  height: 1.25em;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  cursor: pointer;
-}
-
-.menu__barra {
-  width: 100%;
-  height: 4px;
-  background-color: white;
-  border-radius: 20px;
-}
-
-.menu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu ul li {
-  padding: 0 10px;
-}
-
-.menu ul li:hover > a {
-  color: var(--cian);
-}
-
-.menu ul li:hover > ul {
-  display: block;
-}
-
-.menu ul li ul {
-  min-width: 250px;
-  background-color: var(--black);
-  border: 1px solid var(--cian);
-  border-radius: 20px;
-  display: none;
-  position: absolute;
-  z-index: 1000;
-}
-
-.menu ul li ul li {
-  position: relative;
-  padding: 10px;
-  width: 100%;
-  border-bottom: 1px solid var(--cian);
-}
-
-.menu ul li ul li:last-of-type {
-  border-bottom: none;
-}
-
-.menu ul li ul li ul {
-  top: 10px;
-  left: 100%;
-}
-
-.menu ul li ul li a i {
-  margin-bottom: -10px;
-  transform: rotate(-90deg);
-}
-
-.menu ul li a {
-  font-weight: bold;
-  text-decoration: none;
-  color: white;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-between;
-}
-
-.menu ul li a i {
-  padding-left: 10px;
-  color: var(--cian);
-}
-
-@media screen and (min-width: 768px) {
-  .menu {
-    display: block;
-  }
-
-  .menu-open {
-    display: none;
-  }
-
-  .menu .nav {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .menu .nav__item .activo {
-    background-color: var(--cian);
-    margin-top: -5px;
-  }
-}
-
-.header {
-  margin-top: 24px;
-}
-
-.header .wraper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__logo {
-  width: 95px;
-  height: 40px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@media screen and (min-width: 768px) {
-  .header__logo {
-    width: 180px;
-    height: 80px;
-  }
-}
-
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  margin-top: 0;
-  background-color: var(--black);
-  z-index: 10000;
-}
-
-.sticky .header__logo {
-  width: 90px;
-  height: 40px;
-}
-
-.footer {
-  padding-top: 20px;
-}
-
-.footer .copyright {
-  text-align: center;
-  font-weight: bold;
-}
-
-.footer__content {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.footer__content h3 {
-  font-size: 2em;
-}
-
-.footer__content ul {
-  margin: 0;
-  padding: 0;
-}
-
-.footer__content ul li {
-  list-style: none;
-  padding: 5px;
-}
-
-.footer__content ul li a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-}
-
-.footer__content .redes {
-  display: flex;
-}
-
-.footer__content .redes .red {
-  margin-right: 20px;
-  font-size: 1.5em;
-}
-
-.footer__content .footer__item {
-  flex-basis: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .footer__content {
-    flex-wrap: nowrap;
-  }
-
-  .footer__content .footer__item {
-    flex-basis: 33%;
-    margin-right: 20px;
-  }
-}
-
-:root {
-  --black: #0A0909;
-  --cian: #3AC4E5;
-  --menta: #11D1A2;
-  --purpura: #6E2AB6;
-}
-
-:root::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
-}
-
-:root::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(247, 241, 241, 0.5);
-  border-radius: 10px;
-}
-
-:root::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 6px var(--cian);
-}
-
-:root::-webkit-scrollbar-track-piece {
-  width: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: var(--black);
-  font-family: "Assistant", sans-serif;
-  color: white;
-  margin: 0;
-}
-
-h1,
-h2 {
-  text-align: center;
-  font-size: 1.2em;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 768px) {
-  h1,
-  h2 {
-    font-size: 2em;
-  }
-}
-
-.wraper {
-  width: 90%;
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 768px) {
-  .wraper {
-    width: 86%;
-  }
-}
-
-.activo {
-  color: white;
-  font-size: 1em;
-  background-color: var(--menta);
-  font-weight: bold;
-  border: 1px solid var(--menta) !important;
-  border-radius: 2em;
-  padding: 10px 4em;
-  margin: 20px 0;
-}
-
-.activo:hover {
-  color: var(--purpura) !important;
-}
-
-.contacto-hero__descripcion {
-  text-align: center;
-}
-
-.contacto-hero__descripcion p {
-  font-size: 1em;
-}
-
-@media screen and (min-width: 768px) {
-  .contacto-hero__descripcion p {
-    font-size: 1.5em;
-  }
-}
-
-.contacto__content {
-  display: grid;
-  grid-template-columns: 1fr;
-  place-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .contacto__content {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-.contacto__form h3 {
-  color: var(--purpura);
-  font-size: 1.2em;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.contacto__form p {
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .contacto__form p {
-    font-size: 1.5em;
-  }
-
-  .contacto__form h3 {
-    font-size: 2em;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .contacto__logo img {
-    width: 450px;
-    height: 450px;
-  }
-}
-
-form {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 1fr;
-}
-
-form .form-group {
-  display: grid;
-}
-
-form .form-group label {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-form .form-group label span {
-  color: var(--purpura);
-}
-
-form .form-group input {
-  height: 40px;
-  font-size: 1.5em;
-}
-
-form .form-group textarea {
-  font-size: 1.5em;
-}
-
-@media screen and (min-width: 768px) {
-  form {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  form .form-group:last-of-type {
-    grid-column: 1/span 2;
-  }
-}
-
+#open,.menu{display:none}.menu-open{width:1.5em;height:1.25em;display:flex;flex-wrap:wrap;align-items:center;cursor:pointer}.menu__barra{width:100%;height:4px;background-color:#fff;border-radius:20px}.menu ul{list-style:none;margin:0;padding:0}.menu ul li{padding:0 10px}.menu ul li:hover>a{color:var(--cian)}.menu ul li:hover>ul{display:block}.menu ul li ul{min-width:250px;background-color:var(--black);border:1px solid var(--cian);border-radius:20px;display:none;position:absolute;z-index:1000}.menu ul li ul li{position:relative;padding:10px;width:100%;border-bottom:1px solid var(--cian)}.menu ul li ul li:last-of-type{border-bottom:none}.menu ul li ul li ul{top:10px;left:100%}.menu ul li ul li a i{margin-bottom:-10px;transform:rotate(-90deg)}.menu ul li a{font-weight:700;text-decoration:none;color:#fff;text-transform:uppercase;display:flex;justify-content:space-between}.menu ul li a i{padding-left:10px;color:var(--cian)}@media screen and (min-width:768px){.menu{display:block}.menu-open{display:none}.menu .nav{display:flex;justify-content:space-between}.menu .nav__item .activo{background-color:var(--cian);margin-top:-5px}}.header{margin-top:24px}.header .wraper{display:flex;justify-content:space-between;align-items:center}.header__logo{width:95px;height:40px;-o-object-fit:cover;object-fit:cover}@media screen and (min-width:768px){.header__logo{width:180px;height:80px}}.sticky{position:fixed;top:0;width:100%;margin-top:0;background-color:var(--black);z-index:10000}.sticky .header__logo{width:90px;height:40px}.footer{padding-top:20px}.footer .copyright{text-align:center;font-weight:700}.footer__content{display:flex;justify-content:space-between;flex-wrap:wrap}.footer__content h3{font-size:2em}.footer__content ul{margin:0;padding:0}.footer__content ul li{list-style:none;padding:5px}.footer__content ul li a{text-decoration:none;color:#fff;font-weight:700}.footer__content .redes{display:flex}.footer__content .redes .red{margin-right:20px;font-size:1.5em}.footer__content .footer__item{flex-basis:100%}@media screen and (min-width:768px){.footer__content{flex-wrap:nowrap}.footer__content .footer__item{flex-basis:33%;margin-right:20px}}:root{--black:#0a0909;--cian:#3ac4e5;--menta:#11d1a2;--purpura:#6e2ab6}:root::-webkit-scrollbar{height:8px;width:8px}:root::-webkit-scrollbar-track{box-shadow:inset 0 0 6px rgba(247,241,241,.5);border-radius:10px}:root::-webkit-scrollbar-thumb{border-radius:10px;box-shadow:inset 0 0 6px var(--cian)}:root::-webkit-scrollbar-track-piece{width:20px}*{box-sizing:border-box}body{background-color:var(--black);font-family:Assistant,sans-serif;color:#fff;margin:0}h1,h2{text-align:center;font-size:1.2em;font-weight:700;text-transform:uppercase}@media screen and (min-width:768px){h1,h2{font-size:2em}}.wraper{width:90%;margin:0 auto}@media screen and (min-width:768px){.wraper{width:86%}}.activo{color:#fff;font-size:1em;background-color:var(--menta);font-weight:700;border:1px solid var(--menta)!important;border-radius:2em;padding:10px 4em;margin:20px 0}.activo:hover{color:var(--purpura)!important}.contacto-hero__descripcion{text-align:center}.contacto-hero__descripcion p{font-size:1em}@media screen and (min-width:768px){.contacto-hero__descripcion p{font-size:1.5em}}.contacto__content{display:grid;grid-template-columns:1fr;place-items:center}@media screen and (min-width:768px){.contacto__content{grid-template-columns:1fr 1fr}}.contacto__form h3{color:var(--purpura);font-size:1.2em;text-transform:uppercase;text-align:center}.contacto__form p{text-align:center}@media screen and (min-width:768px){.contacto__form p{font-size:1.5em}.contacto__form h3{font-size:2em}}@media screen and (min-width:768px){.contacto__logo img{width:450px;height:450px}}form{grid-gap:20px;grid-template-columns:1fr}form,form .form-group{display:grid}form .form-group label{font-weight:700;margin-bottom:10px}form .form-group label span{color:var(--purpura)}form .form-group input{height:40px;font-size:1.5em}form .form-group textarea{font-size:1.5em}@media screen and (min-width:768px){form{grid-template-columns:1fr 1fr}form .form-group:last-of-type{grid-column:1/span 2}}
